Equipment Maintenance BPMN Example

--- a/modules/web/themes/helium/com.rtcab.cfd/helium-ext.scss
+++ b/modules/web/themes/helium/com.rtcab.cfd/helium-ext.scss
@@ -9,4 +9,7 @@
   --primary-color-shade-2: #A80000;
   --primary-dim-color: #FF2E2E;
 
+
+  --sidemenu-item-badge-color: var(--secondary-contrast-text-color);
+  --sidemenu-item-badge-background-color: var(--secondary-color);
 }
